# HARP

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  harp_planner.yml  index.html  pyproject.toml  run_test.py
.github/workflows/: ci.yml
cloud/: bench_evidence.py  dag_extractor_middleware.py  emit_first_plan.py  harp_planner.yml  model_registry.py  mutation_handler.py  nim_backend.py  plan_emitter.py
data/: stats.json  synth_routing_data.py
demo/: run_demo.py  track_a_routing_demo.py  track_a_routing_trace.jsonl
design/: tokens.json
docs/: ADR.md  DATA_SCHEMA.md  PRD.md  SDD.md  USER_MANUAL.md
docs/superpowers/plans/: 2026-07-02-apple-silicon-models.md
docs/superpowers/specs/: 2026-07-02-apple-silicon-models-design.md
documentation/: ADR.md  DATA_SCHEMA.md  PRD.md  SDD.md  USER_MANUAL.md
edge/: bench.py  bench_genie.py  bootstrap_qdc.cmd  bootstrap_qdc.ps1  compile_qwen3.py  compile_spike.py  genie_backend.py  make_calib.py  power.py  qnn_backend.py  qualcomm_ssh_help.md  run_session.sh
evals/: eval_local_llm.py  eval_score_head.py  hf_candidate.py
fabric/: auth.py  executor.py  remote_backend.py  sync_queue.py  ws_node.py
integrations/hermes/: README.md
integrations/hermes/plugins/hooks/hardware-aware-router/: __init__.py  plugin.yaml
integrations/hermes/plugins/model-providers/harp/: __init__.py  plugin.yaml
integrations/skills/hardware-aware-router/: SKILL.md
integrations/skills/hardware-aware-router/references/: routing_heuristics.md
integrations/skills/hardware-aware-router/scripts/: hardware_probe.py
mac_demo/: README.md  bench_demo.py  calibrate_real.py  harp_bench.jsonl  harp_calibration.jsonl  harp_calibration.summary.json  harp_demo.py  harp_trace.jsonl  local_llm.py  models.json  plan_demo.py  plan_trace.jsonl  prompts_eval.jsonl
router/: drift.py  ngram_head.py  router_policy.py  score_head_calibration.json  score_head_weights.json  tracing.py
scripts/: hf_scout.py  label_trace.py  prepare_genie_bundles.py
serve/: __init__.py  openai_endpoint.py
shared/: conformance.py  harp_contract.py  mutation.py  plan_codec.py  plan_schema.json
tests/: e2e_smoke.py  executor_smoke.py  test_drift.py  test_endpoint_contract.py  test_eval_score_head.py  test_finetune_job.py  test_hermes_provider.py  test_hf_candidate.py  test_hf_scout.py  test_label_trace.py  test_local_llm.py  test_mac_demo.py  test_ngram_head.py  test_npu_single_flight.py  test_pre_llm_call_hook.py  test_route_endpoint.py  test_router_contention.py  test_skill_packaging.py  test_tools_thinking_off.py  test_track_a_demo.py  test_train_score_head.py  ws_roundtrip.py
train/: finetune_llm_job.py  train_score_head.py
