[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harp-runtime"
version = "0.1.0"
description = "A hardware-aware agentic assistant that runs on-device and escalates to the cloud only when a task needs it — its engine is a calibrated edge<->cloud gate that works offline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "HARP contributors" }]
keywords = [
  "agentic-ai", "llm-routing", "edge-ai", "on-device", "npu",
  "inference", "nemo", "nim", "nemotron", "qnn", "snapdragon",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core runtime runs on the standard library only — the plan codec and the
# fabric transport both ship stdlib fallbacks, so `import` and the demo work
# with zero third-party dependencies. The extras below add the stricter paths
# CI exercises (JSON-schema validation, the WebSocket fabric, the NIM client).
dependencies = []

[project.optional-dependencies]
full = ["jsonschema>=4", "websockets>=12", "httpx>=0.27"]
# The OpenAI-compatible endpoint (serve/openai_endpoint.py) is the only third-party
# integration seam; FastAPI/uvicorn live here so the core runtime stays stdlib-only.
serve = ["fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]
dev = ["jsonschema>=4", "websockets>=12", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.29", "ruff>=0.4"]
# Apple-silicon inference/training path (MLX). Core stays stdlib-only.
apple = ["mlx-lm>=0.21", "mlx-embeddings>=0.0.3", "huggingface_hub>=0.34"]

[project.urls]
Homepage = "https://github.com/KunalKumarMehta/HARP"
Repository = "https://github.com/KunalKumarMehta/HARP"

[tool.setuptools]
packages = ["shared", "router", "cloud", "edge", "fabric", "demo", "serve", "evals", "train"]

[tool.ruff]
line-length = 100
target-version = "py311"
